api/error.txt
Main.java:1: error: reached end of file while parsing
public class Main { public static void main(String[] args) { System.out.println("Hello World"); } 
                                                                                                 ^
1 error
